test_scores/negative_dimers/features/O95219.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/O95219.pkl.xz